Agregada seccion about-ia, refactor estilos generales.

--- a/src/app/about-gamification/about-gamification.component.html
+++ b/src/app/about-gamification/about-gamification.component.html
@@ -106,9 +106,9 @@
                 <div class="p-4 bg-dark text-light rounded box-shadow">
                     <h4 class="fst-italic">Te podría interesar.</h4>
                     <ol class="list-unstyled">
-                        <li><a href="https://retosdeprogramacion.com/" class="text-light">Retos de programación</a></li>
-                        <li><a href="https://certidevs.com/" class="text-light">Formación gratuita</a></li>
-                        <li><a href="#" class="text-light">Tech chef</a></li>
+                        <li><a target="_blank" href="https://retosdeprogramacion.com/" class="text-light">Retos de programación</a></li>
+                        <li><a target="_blank" href="https://certidevs.com/" class="text-light">Formación gratuita</a></li>
+                        <li><a target="_blank" href="https://tech-chef.vercel.app/" class="text-light">Tech chef</a></li>
                     </ol>
                 </div>
             </div>
