--- a/src/app/blog-tech/blog-tech.component.html
+++ b/src/app/blog-tech/blog-tech.component.html
@@ -115,7 +115,7 @@
                         afectaran nuestro futuro?
                     </p>
 
-                    <a href="#" class="stretched-link text-black">Continuar leyendo</a>
+                    <a href="blog-tech/about-ia" class="stretched-link text-black">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
                     <img class="bd-placeholder-img" width="200" height="100%"
