--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,17 +45,17 @@
                             el sector hostelero con la tecnología.</p>
                         <div class="buttons">
 
-                            <a href="https://www.linkedin.com/in/jehiel-linarez/">
-                                <button>
-                                    <span> To my LinkedIn
+                            <a target="_blank" href="https://www.linkedin.com/in/jehiel-linarez/">
+                                <button class="rounded">
+                                    <span class="text-dark"> To my LinkedIn
                                     </span>
                                 </button>
                             </a>
 
-                            <a
+                            <a target="_blank"
                                 href="https://www.canva.com/design/DAFvyNgcYg8/pqBj8trI4DJlD6n_-Chi8Q/view?utm_content=DAFvyNgcYg8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
-                                <button class="ms-5">
-                                    <span> Resume
+                                <button class="ms-5 rounded">
+                                    <span class="text-dark"> My cv
                                     </span>
                                 </button>
                             </a>
@@ -87,7 +87,7 @@
         <div class="horizontal-bars"></div>
         <h1 class="text-center mb-5 roboto-medium-italic mt-5">Conoce mis proyectos.</h1>
         <div class="col">
-            <a href="https://bitebooking-frontend-oqb5.vercel.app/home-logout">
+            <a target="_blank"  href="https://bitebooking-frontend-oqb5.vercel.app/home-logout">
                 <div class="card"
                     style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
                     <svg viewBox="0 0 24 24"
@@ -104,7 +104,7 @@
 
         </div>
         <div class="col">
-            <a href="https://jehiell.github.io/landing-page-curso/">
+            <a target="_blank"  href="https://jehiell.github.io/landing-page-curso/">
                 <div class="card "
                     style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
                     <svg viewBox="0 0 24 24"
@@ -120,7 +120,20 @@
 
         </div>
         <div class="col">
-            <a href="https://jehiell.github.io/">
+            <a target="_blank"  href="https://tech-chef.vercel.app/">
+                <div class="card "
+                    style="background-image: url('https://i.ibb.co/tJz4KhR/company.png');">
+                    
+                    <div class="card__content">
+                        <p class="card__title">Tech Chef Company.</p>
+                        <p class="card__description mb-1">Con nuestro sueño hecho realidad, Tech Chef aspira a revolucionar la industria hostelera en España, llevándola hacia un entorno digital. ¡Esta es nuestra startup!</p>
+                    </div>
+                </div>
+            </a>
+
+        </div>
+        <div class="col">
+            <a target="_blank"  href="https://jehiell.github.io/">
                 <div class="card"
                     style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');">
                     <svg viewBox="0 0 24 24"
@@ -142,28 +155,28 @@
 <div class="slider">
 
     <div class="slide-track">
-        <a href="https://github.com/JehielL/bitebooking-frontend">
+        <a target="_blank"  href="https://github.com/JehielL/bitebooking-frontend">
             <div class="slide">
                 <img src="https://avatars1.githubusercontent.com/u/139426?s=280&v=4" alt="">
 
             </div>
         </a>
 
-        <a href="https://github.com/JehielL/oop-java-adecco">
+        <a target="_blank"  href="https://github.com/JehielL/oop-java-adecco">
             <div class="slide">
                 <img src="https://www.vectorlogo.zone/logos/java/java-icon.svg" alt="">
 
             </div>
         </a>
 
-        <a href="https://github.com/JehielL/java-spring">
+        <a target="_blank"  href="https://github.com/JehielL/java-spring">
             <div class="slide">
                 <img src="https://cdn.worldvectorlogo.com/logos/spring-3.svg" alt="">
 
             </div>
         </a>
 
-        <a href="https://github.com/JehielL/curso-java/tree/main/Python">
+        <a target="_blank"  href="https://github.com/JehielL/curso-java/tree/main/Python">
 
             <div class="slide">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Python_logo_51.svg/1200px-Python_logo_51.svg.png"
@@ -172,7 +185,7 @@
             </div>
 
         </a>
-        <a href="https://github.com/JehielL/curso-java/tree/main/SQL">
+        <a target="_blank"   href="https://github.com/JehielL/curso-java/tree/main/SQL">
             <div class="slide">
                 <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="">
 
@@ -185,7 +198,7 @@
 
         </div>
 
-        <a href="https://github.com/JehielL/bitebooking-frontend">
+        <a target="_blank"  href="https://github.com/JehielL/bitebooking-frontend">
             <div class="slide">
                 <img src="https://icons.veryicon.com/png/o/business/vscode-program-item-icon/typescript-def.png" alt="">
 
@@ -237,7 +250,7 @@
                 <i class="bi bi-bricks"></i>
                 <strong>Soft skills.</strong>
                 <p class="mb-3">Con una solida trayectoría dentro de la hostelería, logrando hitos significativos como
-                    miembro fundador de franquicias <a href="www.oh-toro.com"
+                    miembro fundador de franquicias <a target="_blank"  href="www.oh-toro.com"
                         style="text-decoration: none; color:red; font-weight: bold;">Oh-Toro</a>, he logrado desarrollar
                     habilidades que me permiten relacionarme y trabajar en equipo, siendo uno de los pilares
                     fundamentales en mi trayectoria laboral.
@@ -258,14 +271,14 @@
             <h2 class="featurette-heading fw-normal mt-5">Futuros estudios. <span class="text-body-secondary">Up to
                     you.</span></h2>
             <p class="lead">Comprometido con mi crecimiento y estudios, este año 2024, he participado en las conocidas
-                <a href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
+                <a target="_blank"  href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
                     Piscinas</a>, del prestigioso campus 42 de Fundación Telefonica, donde me encuentro desarrollando
                 habilidades en el lenguaje C, como lo son: algoritmos, creación de funciones, gestión de memoría, linux,
                 cyberseguridad y muchisimos otros excitantes proyectos, te recomiendo visitar mi ultimo proyecto
                 realizado en <strong>42.</strong>
             </p>
 
-            <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
+            <a target="_blank"  href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
                     realizado.</button></a>
         </div>
         <div class="custom-icon col-md-3 mt-5">
@@ -290,11 +303,11 @@
         </div>
 
         <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
-            <a href="https://certidevs.com/">
+            <a target="_blank"  href="https://certidevs.com/">
                 <img class="custom-img" src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png"
                     alt="" style="max-width: 200px;">
             </a>
-            <a
+            <a target="_blank" 
                 href="https://www.canva.com/design/DAGECCz67b8/w1WmONl7eaku0hkMvuwixg/view?utm_content=DAGECCz67b8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
                 <img class="custom-img"
                     src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
@@ -311,7 +324,7 @@
                     Chef.</span></h2>
             <p class="lead">Apostando por el talento, mis creencias y afianzado en que el futuro es ahora, he decidido
                 fundar
-                <a href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
+                <a target="_blank"  href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
                     Tech Chef</a>, junto a mi socia y esposa <a
                     href="https://www.linkedin.com/in/maria-laura-asuaje-palmero-94a00380/"
                     style="text-decoration: none; font-weight: 600;" class="text-gradient">Maria Laura Asuaje</a>, con
@@ -321,8 +334,8 @@
             </p>
 
             <div class="tooltip-container">
-                <a routerLink="blog-tech">
-                    <button class="btn btn-outline-danger text">Visita nuestro blog.</button>
+                <a target="_blank"  routerLink="blog-tech">
+                    <button class="btn btn-outline-dark text">Visita nuestra startup</button>
 
                 </a>>
 
@@ -343,7 +356,7 @@
     <div class="form-container">
         <div class="form">
 
-            <h3 class="titulo-seccion   p-2 text-center">Contáctame ahora</h3>
+            <h3 class="titulo-seccion   p-2 text-center">Contáctanos ahora</h3>
             <div class="form-group">
                 <form action="https://formsubmit.co/jehiel.py@gmail.com" method="POST">
 
