--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,48 +1,24 @@
 <nav class="navbar navbar-expand-md bg-custom">
   <div class="container-fluid">
-    <a href="index.html">
-      <img class="ms-3" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 100px;">
+    <a class="navbar-brand" href="index.html">
+      <img class="ms-3" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="Tech Logo" style="max-width: 100px;">
     </a>
 
-    
-    <button class="navbar-toggler text-white" type="button" aria-controls="navbarContent"
-      [attr.aria-expanded]="!collapsed" aria-label="Toggle navigation" (click)="collapsed = !collapsed">
-      <span class="navbar-toggler-icon text-white "></span>
+    <button class="navbar-toggler text-white" type="button" aria-label="Toggle navigation" (click)="collapsed = !collapsed">
+      <span class="navbar-toggler-icon text-white"></span>
     </button>
 
-    <div class="navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
+    <div class="collapse navbar-collapse" [class.show]="!collapsed">
       <ul class="navbar-nav ms-auto">
-
-
-
-        <li class="nav-item" ngbDropdown>
-          <a class="nav-link" id="navbarDropdown2" role="button" ngbDropdownToggle>
-            <i class="nav-icon text-white" style="color: #f3f3f3;"></i> Blog
-          </a>
-          <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-end">
-            <a ngbDropdownItem  routerLink="blog-tech">Sobre
-              tecnología.</a>
-            <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Sobre Gastronomía.</a>
-          </div>
-
+        <li class="nav-item">
+          <a class="nav-link" href="blog-tech">Blog sobre tecnología</a>
         </li>
-
-
-
       </ul>
 
       <!-- Botones de usuario aquí -->
-
-
-
-
-      <a href="https://github.com/JehielL"><button type="button" class="btn btn-login " style="margin-right: 50px;"> <i
-            class="bi bi-github"></i>
-
-          My github</button></a>
-
+      <a href="https://github.com/JehielL" class="btn btn-login mx-2">
+        <i class="bi bi-github"></i> My GitHub
+      </a>
     </div>
   </div>
-
-
 </nav>
