--- a/src/app/about-ia/about-ia.component.html
+++ b/src/app/about-ia/about-ia.component.html
@@ -272,7 +272,7 @@
 <div class="p-4 p-md-5 text-white rounded parallaxdos">
     <div class="">
 
-        <h1 class="display-4  text-center"><span class="custom-subname">Recomendadas</span>
+        <h1 class="display-4  text-center"><span class="custom-subname">Recomendaciones</span>
 
         </h1>
 
