Actualizada version responsive.

--- a/src/app/about-ia/about-ia.component.html
+++ b/src/app/about-ia/about-ia.component.html
@@ -41,9 +41,9 @@
 
     <div class="horizontal-bars mb-3"></div>
     <br>
-    <div class="row g-5">
+    <div class="row">
 
-        <div class="col-md-8">
+        <div class="col-md-7">
 
             <article id="about-ia" class="blog-post box-shadow rounded p-4 text-white bg-dark lead"
                 style="text-align: justify;">
@@ -283,7 +283,7 @@
     <div class="container marketing">
 
         <!-- Cards de compañias recomendadas -->
-        <div class="row justify-content-center gap-3">
+        <div class="row justify-content-center custom-cont">
             <div class="col-md-3 custom-card bg-white mt-3 ms-2 mb-3">
                 <img class="bd-placeholder-img " width="160" height="140"
                     src="https://cdn.icon-icons.com/icons2/2429/PNG/512/google_logo_icon_147282.png"
@@ -367,7 +367,7 @@
 
 
 
-        <div class="row featurette mt-5  p-5 mb-5 rounded bg-black text-white">
+        <div class="row featurette mt-5 custom-cont p-5 mb-5 rounded bg-black text-white">
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1 text-gradient">El futuro en tus manos.</h2>
                 <p class="lead">Las nuevas tecnologías representan un gran avance para la humanidad y la manera como nos comunicamos</p>
@@ -395,10 +395,10 @@
     </h2>
     <div class="row">
         <!-- Card de artículo relacionado 1 -->
-        <div class="col-md-6">
+        <div class="col-md-6 custom-col">
             <div
                 class="row g-0 lead rounded overflow-hidden box-shadow flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-light card-hover">
-                <div class="col p-4 d-flex flex-column position-static">
+                <div class="col p-4  d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 custom-title">Work & Lifestyle</strong>
                     <h3 class="mb-0">De chef a tech.</h3>
                     <div class="mb-1 text-muted">May 02</div>
@@ -407,16 +407,16 @@
                     <a href="blog-tech/about-me" class="stretched-link text-dark">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
-                    <img class="bd-placeholder-img" width="200" height="100%" src="https://i.ibb.co/m6ZVJ7x/chef1.jpg"
+                    <img class="bd-placeholder-img img-recommended" width="200" height="100%" src="https://i.ibb.co/m6ZVJ7x/chef1.jpg"
                         alt="Inteligencia Artificial" aria-label="Inteligencia Artificial">
                 </div>
             </div>
         </div>
         <!-- Card de artículo relacionado 2 -->
-        <div class="col-md-6">
+        <div class="col-md-6 custom-col">
             <div
                 class="row g-0 bg-dark lead rounded overflow-hidden flex-md-row mb-4 box-shadow shadow-sm h-md-250 position-relative card-hover">
-                <div class="col p-4 d-flex flex-column position-static">
+                <div class="col p-4 d-flex flex-column  position-static">
                     <strong class="d-inline-block mb-2 text-white">Technology</strong>
                     <h3 class="mb-0 text-white">El universo de 42.</h3>
                     <div class="mb-1 text-muted">May 02</div>
