--- a/src/app/about-ia/about-ia.component.css
+++ b/src/app/about-ia/about-ia.component.css
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 99.5vw;
+    max-width: 100vw;
     background-color: black;
 }
 
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 99.5vw;
+    max-width: 100%;
     background-color: black;
 }
 
@@ -111,20 +111,39 @@
     }
 
     .custom-subname {
-        font-size: 1.5em;
+        font-size: 2.8rem;
         font-weight: bold;
         color: transparent;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         -webkit-text-stroke: 3px mintcream;
+        width: 90% !important;
     }
 
     .content-column {
         display: flex;
         flex-direction: column-reverse;
+        margin-left: 6% !important;
+        margin-top: 10px !important;
+    }
+    .custom-cont{
+        margin-left: 2% !important;
+    }
+    .custom-col{
+        margin-left: 9% !important;
     }
 
     .content-column .position-sticky {
         order: -1;
+    }
+
+    .custom-name{
+        margin-left: -5% !important;
+    }
+    .custom-othername{
+        margin-left: -5% !important;
+    }
+    .lead{
+        font-size: 15px !important;
     }
 }
 
@@ -215,6 +234,21 @@ button:active {
         border-radius: 50%;
         margin-left: 25%;
 
+    }
+    .row{
+        max-width: 95% !important;
+      
+    }
+    
+    .blog-post{
+        margin-left: 11% !important;
+        max-width: 100% !important;
+    }
+
+    .overlay{
+        max-width: 90% !important;
+        text-align: center;
+        margin-left: 5% !important;
     }
 }
 
