Actualizada url tech chef.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -334,7 +334,7 @@
             </p>
 
             <div class="tooltip-container">
-                <a target="_blank"  routerLink="blog-tech">
+                <a target="_blank"  href="https://tech-chef.vercel.app/">
                     <button class="btn btn-outline-dark text">Visita nuestra startup</button>
 
                 </a>>
