--- a/src/app/blog-tech/blog-tech.component.html
+++ b/src/app/blog-tech/blog-tech.component.html
@@ -109,7 +109,7 @@
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-white">Artificial inteligence</strong>
                     <h3 class="mb-0 text-white">Powered by ai.</h3>
-                    <div class="mb-1 text-muted">May 02</div>
+                    <div class="mb-1 text-white">Jun 05</div>
                     <p class="card-text mb-auto text-white">
                         Inteligencia artificial, machine learning, deep learning, ¿qué significan estos términos y cómo
                         afectaran nuestro futuro?
