Actualizada url bitebooking.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -87,7 +87,7 @@
         <div class="horizontal-bars"></div>
         <h1 class="text-center mb-5 roboto-medium-italic mt-5">Conoce mis proyectos.</h1>
         <div class="col">
-            <a target="_blank"  href="https://bitebooking-frontend-oqb5.vercel.app/home-logout">
+            <a target="_blank"  href="https://bitebooking-frontend.vercel.app/home-logout">
                 <div class="card"
                     style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
                     <svg viewBox="0 0 24 24"
