Agregada seccion timeline-chef

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -250,7 +250,7 @@
                 <i class="bi bi-bricks"></i>
                 <strong>Soft skills.</strong>
                 <p class="mb-3">Con una solida trayectoría dentro de la hostelería, logrando hitos significativos como
-                    miembro fundador de franquicias <a target="_blank"  href="www.oh-toro.com"
+                    miembro fundador de franquicias <a
                         style="text-decoration: none; color:red; font-weight: bold;">Oh-Toro</a>, he logrado desarrollar
                     habilidades que me permiten relacionarme y trabajar en equipo, siendo uno de los pilares
                     fundamentales en mi trayectoria laboral.
@@ -346,6 +346,33 @@
         <div class="col-md-4 ">
             <img class="custom-img rotating-image" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt=""
                 style="max-width: 350px;">
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+
+    <div class="row featurette ">
+        <div class="col-md-6 order-md-2">
+            <h2 class="featurette-heading fw-normal lh-1">Mi trayectoria en la hostelería. <span
+                    class="text-body-secondary">Un sueño logrado.</span></h2>
+            <p class="lead">Desde el año 2023 me encuentro sumergido en un master intensivo de desarrollo web, este fue
+                impartido por <a href="https://certidevs.com/"
+                    style="text-decoration: none; color:black; font-weight: 500;"> Certidevs</a>, en el cual hemos
+                contado con la participación de Alan sastre como instructor, el cual ha garantizado mediante su
+                plataforma, evaluado a traves de inteligencia artificial, que hemos completado satisfactoriamente la
+                formación que nos permite acceder al mundo laboral.</p>
+            <button class="btn btn-outline-dark" routerLink="timeline-chef">Conoce mi carrera.</button>
+
+        </div>
+
+        <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
+            <a target="_blank"  href="https://certidevs.com/">
+                <img class="custom-img img-profile" src="https://i.ibb.co/yY49sKh/Captura-de-pantalla-2024-06-11-003555.png"
+                    alt="" style="max-width: 330px;">
+            </a>
+            
+
         </div>
     </div>
 
