--- a/src/app/timeline-chef/timeline-chef.component.html
+++ b/src/app/timeline-chef/timeline-chef.component.html
@@ -178,7 +178,7 @@
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">A new chapter</h4>
                         <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2021</p>
-                        <p class="mb-0">Llega a Madrid el prestigioso restaurante Zuma. Al ser yo una persona que me especialicé en los últimos años en gastronomía japonesa, la decisión era inevitable. Logré entrar a Zuma como Jefe de Partida de la prestigiosa sección de Robata, donde iluminamos el cielo de Madrid por dos años, siendo partícipe de eventos como la despedida de Marcelo del Real Madrid. Fue una asombrosa experiencia.
+                        <p class="mb-0">Llega a Madrid el prestigioso restaurante Zuma. Al ser yo una persona que me especialicé en gastronomía japonesa, la decisión era inevitable. Logré entrar a Zuma como Jefe de Partida de la sección de Robata, donde iluminamos el cielo de Madrid por dos años, siendo partícipe de eventos como la despedida de Marcelo del Real Madrid. Fue una asombrosa experiencia.
                             <br>
                             Luego decido retirarme para continuar mis estudios y es donde comienzo a desarrollar web.
                         </p>
