Arreglados errores ortografía.

--- a/src/app/timeline-chef/timeline-chef.component.html
+++ b/src/app/timeline-chef/timeline-chef.component.html
@@ -82,7 +82,7 @@
                 <div class="card">
                     <img src="https://i.ibb.co/N6HgwNg/img2.jpg" class="card-img-top" alt="Responsive image">
                     <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4"> Marketing Consultant Panama, s.a</h4>
+                        <h4 class="fw-bold mb-4"> Marketing Consultant Panamá, s.a</h4>
                         <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2016</p>
                         <p class="mb-0">Dedicada a gestionar diferentes marcas, logre posicionarme como gerente de
                             operaciones, llevando a cabo aperturas y desarrollo de conceptos de marcas como: <a
