refactor images, about tech chef.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="col-lg-5">
-                        <img src="https://i.ibb.co/BLfxddp/profile.jpg"
+                        <img src="./assets/profile1.jpg"
                             class="img-fluid custom-photo" alt="">
                     </div>
 
@@ -325,9 +325,7 @@
             <p class="lead">Apostando por el talento, mis creencias y afianzado en que el futuro es ahora, he decidido
                 fundar
                 <a target="_blank"  href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
-                    Tech Chef</a>, junto a mi socia y esposa <a
-                    href="https://www.linkedin.com/in/maria-laura-asuaje-palmero-94a00380/"
-                    style="text-decoration: none; font-weight: 600;" class="text-gradient">Maria Laura Asuaje</a>, con
+                    Tech Chef</a>, con
                 el objetivo de avanzar el proceso de digitalización de la hostelería en España, realizando
                 investigaciones y desarrollos que lleven a una economía mas sostenible, apoyando y asesorando al
                 pequeño comercio.
