--- a/src/app/timeline-chef/timeline-chef.component.html
+++ b/src/app/timeline-chef/timeline-chef.component.html
@@ -80,7 +80,7 @@
             </div>
             <div class="timeline-2 right-2">
                 <div class="card">
-                    <img src="https://i.ibb.co/N6HgwNg/img2.jpg" class="card-img-top" alt="Responsive image">
+                    <img src="/src/assets/wahkee1.jpg" class="card-img-top" alt="Responsive image">
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4"> Marketing Consultant Panamá, s.a</h4>
                         <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2016</p>
